consistant doc with jsdoc format

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,9 @@
     <title>Wealth Health</title>
   </head>
   <body>
+  <!-- Le div avec l'ID "root" est l'élément cible pour le rendu de l'application React -->
     <div id="root"></div>
+    <!-- Le script type="module" charge le fichier "main.jsx" qui contient l'application React -->
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
